# AlgMet-IDATG2102

Eksamen/: Traer_Case3.cpp  eksamen_s24_3.cpp  eksamen_s24_4.cpp  eksamen_v23_3.cpp  eksamen_v23_4.cpp
Eksempler/: CMakeLists.txt  README.md  eks_01_Vector.cpp  eks_08_TreTraversering.cpp  eks_14_DronningPlassering.cpp  eks_17_Tre_Case3.cpp  eks_24_QuickSort.cpp
Obliger/: Oblig5.cpp  oblig2.cpp
Oppgaver/: Case_2.cpp  Case_3.cpp  Case_4.cpp  Case_6.cpp  Oppgave_6.cpp  Oppgave_7.cpp  oppg_08-HOVEDRISS.cpp
ProgramKjoring/: ProgramKjoring.cbp  ProgramKjoring.depend  ProgramKjoring.layout
